# jni-example

./: .gitignore
c-part/: BaseJniClass.cpp  BaseJniClassJni.h  CMakeLists.txt  ExampleJni.cpp  ExampleJni.h  Plugin.cpp  Plugin.h  PluginJni.cpp  PluginJni.h  PluginLoader.h  PluginLoaderJni.cpp  PluginLoaderJni.h  handle.cpp  handle.h  library.cpp  library.h
java-part/src/com/spartan2015/: BaseJniClass.java  ExampleJni.java  Main.java  Plugin.java  PluginLoader.java
